--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
   "author": "",
   "license": "GPL-3.0-or-later",
   "dependencies": {
+    "luxon": "^3.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
+    "@types/luxon": "^3.4.2",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "cpx": "^1.5.0",
